--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,15 @@
     />
     <script src="https://kit.fontawesome.com/aba8918a41.js" crossorigin="anonymous"></script>
     <title>Graph Sketchpad</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PESE0SQ993"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PESE0SQ993');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
